# Aids-Molecule

./: .gitignore  .gitmodules  README.md
SEM1/lab1/: main  main.c
SEM1/lab2/: main1  main1.c  main2  main2.c
SEM1/lab3/: cases.c  cases.h  holylib.c  holylib.h  main  main.c
SEM1/lab4/: holylib.c  holylib.h  main  main.c  mainPro  mainPro.c  myreadline.c  myreadline.h  mystring.c  mystring.h  textProcessor.c  textProcessor.h  textProcessorPro.c  textProcessorPro.h
SEM1/lab5/: holylib.c  holylib.h  input.txt  main  main.c  main2  main2.c  sort.c  sort.h  structGen.c  structGen.h  structReader.c  structReader.h
SEM1/lab5/logs/: binarySearchAvg.txt  binarySearchWorst.txt  oddEvenSortAvg.txt  oddEvenSortWorst.txt
SEM1/lab6/: list.c  list.h  main  main.c  readline.c  readline.h  sort.c  sort.h
SEM1/reports/: 3.xdv  algorithm.tex  conclusion.tex  data-types.tex  problem.tex  report.aux  report.fdb_latexmk  report.fls  report.tex  report.xdv  screens.tex  source.tex  test.tex  title.aux  title.tex
SEM2/: SEM2.sln  SEM2.vcxproj  Source.cpp
SEM2/Lab1/: ModuleTest.c  base.c  base.h  complex.c  complex.h  container.c  container.h  dynamicArray.c  dynamicArray.h  main.c  real.c  real.h  ring.c  ring.h  sort.c  sort.h
SEM2/Lab2/: CMakeLists.txt  Makefile  clear.sh  conanfile.txt  debug.sh  imgui.ini  launch.sh
SEM2/Lab2-3/: CMakeLists.txt  Makefile  clear.sh  debug.sh  imgui.ini  imgui_log.txt
SEM2/Lab2-3-4/: CMakeLists.txt
SEM2/Lab2-3-4/controlRoom/: app.sh  build.sh  clear.sh  debug.sh  launch.sh  test.sh
SEM2/Lab2-3-4/include/: ADT.h  Allocator.h  CString.h  Iterator.h  Logger.h  Pair.h  Pointer.h  Tuple.h  complex.h  concepts.h
SEM2/Lab2-3-4/include/Dict/: HashTable.h  IDictionary.h  IHasher.h  PtrHasher.h  STLHasher.h
SEM2/Lab2-3-4/include/Linal/: Matrix.h  Vector.h
SEM2/Lab2-3-4/include/Pointer/: SharedPtr.h  UniquePtr.h
SEM2/Lab2-3-4/include/Sequence/: Array.h  ArraySequence.h  IContainer.h  IIterator.h  List.h  ListSequence.h  SegmentedList.h  Sequence.h  SortedSequence.h  Stack.h
SEM2/Lab2-3-4/include/Sorter/: HeapSort.h  ISorter.h  QuickSort.h  ShellSort.h
SEM2/Lab2-3-4/include/Tree/: BTree.h  BinaryHeap.h  BinarySearchTree.h  BinaryTree.h  ITree.h  MultiBinaryTree.h  MultiSearchTree.h  OrderedSet.h
SEM2/Lab2-3-4/include/functional/: Algorithms.h  mapreduce.h  range.h
SEM2/Lab2-3-4/include/str/: CString.cpp  CString.h
SEM2/Lab2-3-4/python/: binder.cpp  designer.sh  gui.py  logic.py  plot.py  raw_pointers.txt  smart_pointers.txt
SEM2/Lab2-3-4/python/env/: pyvenv.cfg
SEM2/Lab2-3-4/python/install/: pyvenv.cfg
SEM2/Lab2-3-4/src/: GUI.cpp  GUI.h  main.cpp  test.cpp
SEM2/Lab2-3-4/tests/: ArrayTests.cpp  BinaryHeapTests.cpp  BinaryTreeTests.cpp  CStringTests.cpp  HashTableTests.cpp  MatrixTests.cpp  OrderedSetTests.cpp  SegmentedListTests.cpp  SequenceTests.cpp  SortedSequenceTests.cpp  SorterTests.cpp  moduleTest.h
SEM2/Lab2-3/include/: ADT.h  Allocator.h  Logger.h  Pointer.h  Tuple.h  complex.h
SEM2/Lab2-3/include/Linal/: Matrix.h  Vector.h
SEM2/Lab2-3/include/Sequence/: Array.h  ArraySequence.h  IContainer.h  List.h  Sequence.h
SEM2/Lab2-3/include/Tree/: BinaryTree.h  ITree.h
SEM2/Lab2-3/src/: ADT.h  Allocator.h  Array.h  ArraySequence.h  ArrayTests.h  GUI.cpp  GUI.h  IContainer.h  ListSequence.h  Logger.h  Matrix.h  Pointer.h  SegmentedList.h  SegmentedListTests.h  Sequence.h  SequenceTests.h  Tree.h  Vector.h  complex.h  main.cpp  moduleTest.cpp  test.cpp
SEM2/Lab2-3/tests/: ArrayTests.cpp  MatrixTests.cpp  SegmentedListTests.cpp  SequenceTests.cpp  moduleTest.cpp  moduleTest.h
SEM2/Lab2/src/: ADT.h  Allocator.h  Array.h  ArraySequence.h  ArrayTests.h  CMakeLists.txt  GUI.cpp  GUI.h  IContainer.h  IIterator.h  List.h  ListSequence.h  Logger.h  SegmentedList.h  SegmentedListTests.h  Sequence.h  SequenceTests.h  Tuple.h  main.cpp  moduleTest.cpp  moduleTest.h
SEM2/x64/Debug/: SEM2.vcxproj.FileListAbsolute.txt  lab1.exe.recipe  lab1.ilk  vc143.idb
SEM2/x64/Debug/lab1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
report/: algorithm.tex  conclusion.tex  data-types.tex  preamble.tex  report.fdb_latexmk  report.fls  report.tex  screens.tex  src.tex  task.tex  tests.tex  title.tex
report/src/: prog1.c
